fix(production): resolve Render production Admin login failure and API routing fallback